# bls12_381_ietf

./: Cargo.toml  README.md
examples/: g2basic.rs  g2messageaugmentation.rs  main.rs
src/: constants.rs  hash_to_curve.rs  lib.rs  optimized_swu.rs
