[package]
name = "bls12_381_ietf"
version = "0.1.0"
authors = ["Eduardo Antuña Díez <eduadiez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
#pairing = { package = "pairing_ce", git="https://github.com/matter-labs/pairing.git", branch="pull/6/head" }
pairing = { package = "pairing_ce", git="https://github.com/gakonst/pairing.git", branch="expose-points" }
num-bigint = "0.2"
num-traits = "0.2"
hkdf = "0.8.0"
sha2 = { version = "0.8", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }


[lib]
name = "bls12_381_ietf"
path = "src/lib.rs"